--- a/nanoplm/templates/new-product.html
+++ b/nanoplm/templates/new-product.html
@@ -3,7 +3,7 @@
 {% block style %}{% endblock style %}
 
 {% block content %}
-<h1>New Product</h1>
+<h1>Neues Produkt</h1>
 <form method="POST" action="/" enctype="multipart/form-data">
     <table>
         <tr>
