--- a/nanoplm/templates/home.html
+++ b/nanoplm/templates/home.html
@@ -9,7 +9,7 @@ table, th, td {
 {% endblock style %}
 
 {% block content %}
-<h1>All Products</h1>
+<h1>Alle Produkte</h1>
 <table>
     <tr>
         <th>Name</th>
