--- a/nanoplm/templates/base.html
+++ b/nanoplm/templates/base.html
@@ -8,7 +8,7 @@
     {% if title %}
         <title>{{ title }} | nanoPLM</title>
     {% else %}
-        <title>nanoPLM - Manage product data in small teams</title>
+        <title>nanoPLM - Produktdaten im kleinen Team verwalten</title>
     {% endif %}
 
     <!-- Favicon -->
