--- a/nanoplm/templates/home.html
+++ b/nanoplm/templates/home.html
@@ -5,6 +5,15 @@
 table, th, td {
   border: 1px solid black;
 }
+
+td {
+    padding-right: 0.6rem;
+}
+
+th {
+    padding-left: 0.6rem;
+    padding-right: 0.6rem;
+}
 </style>
 {% endblock style %}
 
