--- a/nanoplm/templates/new-product.html
+++ b/nanoplm/templates/new-product.html
@@ -1,10 +1,16 @@
 {% extends "base.html" %}
 
-{% block style %}{% endblock style %}
+{% block style %}
+<style>
+    td {
+        padding-right: 0.6rem;
+    }
+</style>
+{% endblock style %}
 
 {% block content %}
 <h1>Neues Produkt</h1>
-<form method="POST" action="/" enctype="multipart/form-data">
+<form action="/new-product" method="POST">
     <table>
         <tr>
             <td>{{ form.name.label }}</td>
