--- a/nanoplm/templates/new-product.html
+++ b/nanoplm/templates/new-product.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 <h1>Neues Produkt</h1>
-<form action="/new-product" method="POST">
+<form action="/" method="POST">
     <table>
         <tr>
             <td>{{ form.name.label }}</td>
