--- a/nanoplm/templates/new-product.html
+++ b/nanoplm/templates/new-product.html
@@ -10,7 +10,8 @@
 
 {% block content %}
 <h1>Neues Produkt</h1>
-<form action="/" method="POST">
+<form action="{{ url_for('new_product')}}" method="POST">
+    {{ form.csrf_token }}
     <table>
         <tr>
             <td>{{ form.name.label }}</td>
