--- a/nanoplm/templates/product.html
+++ b/nanoplm/templates/product.html
@@ -63,6 +63,10 @@ th, td {
         <td>Zähnezahl</td>
         <td>{{ product.zaehnezahl }}</td>
     </tr>
+    <tr>
+        <td>Status</td>
+        <td>{{ product.status }}</td>
+    </tr>
 </table>   
 <a href="{{ url_for('home') }}">< Zurück</a> 
 {% endblock content %}
