--- a/nanoplm/templates/base.html
+++ b/nanoplm/templates/base.html
@@ -20,7 +20,7 @@
     <p style="font-size: 1.1rem; "><a style="color: black; text-decoration: none;" href="{{ url_for('home') }}">ALSADO | nanoPLM</a></p>
     <nav style="margin-bottom: 1rem;">
         <a style="margin-right: 0.4rem;" href="{{ url_for('home') }}">Start</a>
-        <a style="margin-right: 0.4rem;" href="{{ url_for('new_product') }}">Neues Produkt</a>
+        <a style="margin-right: 0.4rem;" href="{{ url_for('create_product') }}">Neues Produkt</a>
         <a style="margin-right: 0.4rem;" href="{{ url_for('getting_started') }}">Schnellstart</a>
     </nav>
     {% block content %}{% endblock content %}
