--- a/nanoplm/templates/read-product.html
+++ b/nanoplm/templates/read-product.html
@@ -72,7 +72,7 @@ th, td {
         <td>
             <a href="{{ url_for('update_product', product_uuid=product.uuid) }}">bearbeiten</a>
             <br>
-            <a href="{{ url_for('run_freecad_wizard', product_uuid=product.uuid) }}">Wizard</a>
+            <a href="{{ url_for('run_freecad_wizard', product_uuid=product.uuid) }}">Wizard starten</a>
             <br>
             {% if product.status != 'Freigegeben' %}
             <a href="{{ url_for('release_product', product_uuid=product.uuid) }}">freigeben</a>
