--- a/nanoplm/templates/home.html
+++ b/nanoplm/templates/home.html
@@ -58,6 +58,14 @@ th {
             <br>
             {% endif %}
 
+            {% if product.generic_available == True %}
+            <a href="#">STEP herunterladen</a>
+            <br>
+            {% else %}
+            <span>Keine STEP zugewisen</span>
+            <br>
+            {% endif %}
+
             {% if product.techdraw_available == True %}
             <a href="#">PDF herunterladen</a>
             <br>
