--- a/nanoplm/templates/home.html
+++ b/nanoplm/templates/home.html
@@ -82,16 +82,18 @@ th {
             <br>
             {% endif %}
         </td>
-        <td>{{ product.status }}</td>
         <td>
-            <a href="{{ url_for('update_product', product_uuid=product.uuid) }}">bearbeiten</a>
+            {{ product.status }}
+            {% if product.status != 'Freigegeben' %}
             <br>
+            <a href="{{ url_for('release_product', product_uuid=product.uuid) }}">freigeben</a>
+            {% endif %}
+        </td>
+        <td>
             <a href="{{ url_for('run_freecad_wizard', product_uuid=product.uuid) }}">Wizard starten</a>
             <br>
-            {% if product.status != 'Freigegeben' %}
-            <a href="{{ url_for('release_product', product_uuid=product.uuid) }}">freigeben</a>
+            <a href="{{ url_for('update_product', product_uuid=product.uuid) }}">bearbeiten</a>
             <br>
-            {% endif %}
             <a href="{{ url_for('delete_product', product_uuid=product.uuid) }}">entfernen</a>
         </td>
     </tr>
