--- a/nanoplm/templates/read-product.html
+++ b/nanoplm/templates/read-product.html
@@ -77,15 +77,23 @@ th, td {
         <td>Dateien</td>
         <td>
             {% if product.freecad_available == True %}
-            <a href="#">FCSTD herunterladen</a>
+            <a href="{{ url_for('static', filename='projects/'+product.uuid+'.FCStd') }}">FCSTD herunterladen</a>
             <br>
             {% else %}
             <span>Keine FCSTD zugewisen</span>
             <br>
             {% endif %}
 
+            {% if product.preview_available == True %}
+            <a href="{{ url_for('static', filename='projects/'+product.uuid+'.stl') }}">STL herunterladen</a>
+            <br>
+            {% else %}
+            <span>Keine STL zugewisen</span>
+            <br>
+            {% endif %}
+
             {% if product.generic_available == True %}
-            <a href="#">STEP herunterladen</a>
+            <a href="{{ url_for('static', filename='projects/'+product.uuid+'.step') }}">STEP herunterladen</a>
             <br>
             {% else %}
             <span>Keine STEP zugewisen</span>
