--- a/nanoplm/templates/welcome.html
+++ b/nanoplm/templates/welcome.html
@@ -11,6 +11,11 @@
 {% block content %}
 <h1>Glückwunsch!</h1>
 <p>Du hast nanoPLM erfolgreich installiert.</p>
+<ol>
+    <li>Erstelle dein erstes Produkt</li>
+    <li>Generiere automatisch die FreeCAD (FCStd), STEP, DXG und PDF Dateien</li>
+    <li>Gebe das Produkt für die Herstellung frei</li>
+</ol>
 <a href="{{ url_for('home') }}">Jetzt starten</a>
 
 {% endblock content %}
