--- a/nanoplm/templates/welcome.html
+++ b/nanoplm/templates/welcome.html
@@ -23,13 +23,13 @@
 <br>
 <br>
 {% else %}
-<span>[INFO]: FreeCAD Installation erkannt. Du hast jetzt Zugriff auf "Wizard starten".</span>
+<span>[INFO]: {{ SELECTED_FREECAD_VERSION }} Installation erkannt. Du hast jetzt Zugriff auf "Wizard starten".</span>
 <br>
     {% if NANOPLM_MODULE_FREECADGUI == False %}
     <span>[INFO]: FreeCAD GUI API nicht verfügbar. Ihr Server unterstützt keine GUI.</span>
     <br>
     {% else %}
-    <span>[INFO]: FreeCAD GUI API verfügbar.</span>
+    <span>[INFO]: {{ SELECTED_FREECAD_VERSION }} GUI API verfügbar.</span>
     <br>
     {% endif %}
 <br>
