--- a/nanoplm/templates/base.html
+++ b/nanoplm/templates/base.html
@@ -17,6 +17,40 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="48x48" href="{{ url_for('static', filename='nanoplm-logo.png') }}">
 
+    <style>
+        .btn-link-transparent:hover {
+            background-color: rgba(0, 0, 0, 0.136);
+            outline: 1px;
+        }
+        
+        .btn-link-transparent:hover:active {
+            background-color: rgba(0, 0, 0, 0.421);
+            outline: 1px;
+        }
+
+        .input-search-header:focus {
+            background-color: white !important;
+        }
+
+        .input-search-header:focus::placeholder {
+            color: rgb(189, 189, 189) !important;
+            opacity: 1; /* Firefox */
+        }
+
+        .input-search-header:focus::-ms-input-placeholder { /* Edge 12 -18 */
+            color: rgb(189, 189, 189) !important;
+        }
+
+        .input-search-header::placeholder {
+            color: rgb(72, 128, 201);
+            opacity: 1; /* Firefox */
+        }
+
+        .input-search-header::-ms-input-placeholder { /* Edge 12 -18 */
+            color: rgb(72, 128, 201);
+        }
+    </style>
+
     {% block style %}{% endblock style %}
 </head>
 <body style="min-width: 100%; min-height: 100%; max-width: 100%; max-height: 100%; margin: 0; padding: 0;">
@@ -31,11 +65,11 @@
             </div>
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 <form role="search">
-                    <input type="search" style="width: 380px; height: 36px;" class="form-control" placeholder="Suche..." aria-label="Search">
+                    <input type="search" style="width: 380px; height: 36px; background-color:rgb(9, 68, 146); border-color: rgb(72, 128, 201);" class="form-control input-search-header" placeholder="Suche..." id="site-search" aria-label="Search">
                 </form>
             </ul>
             <div class="col-md-3 text-end">
-                <button class="btn btn-link p-1">
+                <button class="btn btn-link p-1 btn-link-transparent">
                     <img src="{{ url_for('static', filename='info.png') }}" alt="" style="padding: 0;" height="32px" width="32px" onclick="showSidebarRight()">
                 </button>
             </div>
