--- a/nanoplm/templates/base.html
+++ b/nanoplm/templates/base.html
@@ -151,6 +151,7 @@
         }
         function showGWJFitCalculator(){
             document.getElementById("main-view-iframe").src = "https://modules21.eassistant.eu/fitcalc";
+            document.getElementById("sidebar-right-iframe").src = "https://modules21.eassistant.eu/fitcalc/help/de/FitCalcHelp.html";
         }
         function showGWJShaftDimensions(){
             document.getElementById("main-view-iframe").src = "https://modules21.eassistant.eu/shaftdim";
